include $(top_srcdir)/build.rules.mk

ASSEMBLY=Bibtex

FILES = \
	gtk-gui/Bibtex.Configuration.cs \
	gtk-gui/generated.cs \
	src/BibtexAuthorsItem.cs \
	src/BibtexCiteAction.cs \
	src/BibtexItem.cs \
	src/BibtexItemSource.cs \
	src/Configuration.cs

RESOURCES = \
	Resources/Bibtex.addin.xml \
	gtk-gui/gui.stetic \
	gtk-gui/objects.xml

REFERENCES = \
	System \
	System.Core \
	$(GTK_SHARP_20_LIBS) \
	$(DO_PLATFORM_LIBS) \
	$(DO_PLATFORM_LINUX_LIBS) \
	$(DO_UNIVERSE_LIBS)
