include $(top_srcdir)/build.rules.mk

ASSEMBLY=Cl.ickable

FILES = \
	src/ClickableItemSource.cs \
	src/ClipAction.cs \
	src/WebClipsItem.cs

RESOURCES = \
	Resources/Resources/Cl.ickable.addin.xml

REFERENCES = \
	Mono.Posix \
	System \
	System.Core \
	System.Web \
	$(DO_PLATFORM_LIBS) \
	$(DO_UNIVERSE_LIBS)
