include $(top_srcdir)/build.rules.mk

ASSEMBLY=ClawsMail

FILES = \
	src/ClawsContactDetailItem.cs \
	src/ClawsContactsItemSource.cs

RESOURCES = \
	resources/ClawsMail.addin.xml \
	resources/claws-mail.png

REFERENCES = \
	System \
	System.Xml \
	System.Core \
	Mono.Posix \
	$(DO_PLATFORM_LIBS) \
	$(DO_UNIVERSE_LIBS)
