include $(top_srcdir)/build.rules.mk

ASSEMBLY=ClawsMail

FILES = \
	src/ClawsContactDetailItem.cs \
	src/ClawsContactsItemSource.cs

RESOURCES = \
	Resources/ClawsMail.addin.xml \
	Resources/claws-mail.png

REFERENCES = \
	System \
	System.Xml \
	System.Core \
	Mono.Posix \
	$(DO_PLATFORM_LIBS) \
	$(DO_UNIVERSE_LIBS)
