include $(top_srcdir)/build.rules.mk

ASSEMBLY=ClawsMail

FILES = \
	src/ClawsContactDetailItem.cs \
	src/ClawsContactsItemSource.cs

GENERATED_RESOURCES = \
	Resources/ClawsMail.addin.xml
RESOURCES = \
	Resources/icons/claws-mail.png

REFERENCES = \
	System \
	System.Xml \
	System.Core \
	$(DO_PLATFORM_LIBS) \
	$(DO_UNIVERSE_LIBS)
