include $(top_srcdir)/build.rules.mk

ASSEMBLY=del.icio.us

FILES = \
	src/BookmarksItemSource.cs \
	src/Configuration.cs \
	src/Delicious.cs \
	src/NewBookmarkAction.cs \
	src/SearchAction.cs \
	src/TagItem.cs \
	src/TagsItemSource.cs 

RESOURCES = \
	Resources/del.icio.us.addin.xml \
	resources/delicious.png

REFERENCES = \
	Mono.Posix \
	System \
	System.Core \
	System.Web \
	System.Xml \
	$(GTK_SHARP_20_LIBS) \
	$(GCONF_SHARP_20_LIBS) \
	$(DO_PLATFORM_LINUX_LIBS)
