include $(top_srcdir)/build.rules.mk

ASSEMBLY=del.icio.us

FILES = \
	src/BookmarksItemSource.cs \
	src/Configuration.cs \
	src/Delicious.cs \
	src/NewBookmarkAction.cs \
	src/Preferences.cs \
	src/SearchAction.cs \
	src/TagItem.cs \
	src/TagsItemSource.cs 

RESOURCES = \
	Resources/delicious.addin.xml \
	Resources/icons/delicious.png

REFERENCES = \
	System \
	System.Core \
	System.Web \
	System.Xml \
	$(GTK_SHARP_20_LIBS) \
	$(DO_PLATFORM_LINUX_LIBS)
