include $(top_srcdir)/build.rules.mk

ASSEMBLY=DiskMounter

FILES = \
	src/DriveItem.cs \
	src/DriveItemSource.cs \
	src/MountAction.cs \
	src/OpenVolumeAction.cs \
	src/UnmountAction.cs

RESOURCES = \
	Resources/DiskMounter.addin.xml

REFERENCES = \
	System \
	System.Core \
	$(GNOME_VFS_SHARP_20_LIBS) \
	$(DO_PLATFORM_LIBS)
