include $(top_srcdir)/build.rules.mk

ASSEMBLY=Dropbox

FILES = \
  src/DropboxWebInterfaceAction.cs \
  src/DropboxAbstractAction.cs \
  src/DropboxRevisionsAction.cs \
  src/DropboxPuburlAction.cs \
  src/DropboxUnshareAction.cs \
  src/DropboxShareAction.cs \
  src/DropboxStartAction.cs \
  src/DropboxStopAction.cs \
  src/DropboxLinkAction.cs \
  src/Dropbox.cs

RESOURCES = \
  Resources/Dropbox.addin.xml

REFERENCES = \
  System \
  System.Core \
  $(DO_PLATFORM_LIBS) \
  $(DO_UNIVERSE_LIBS)
