include $(top_srcdir)/build.rules.mk

ASSEMBLY=Exaile

FILES = \
	src/MusicItems.cs \
	src/Exaile.cs \
	src/ExaileItems.cs \
	src/PlayAction.cs \
	src/MusicItemSource.cs \
	src/AbstractPlaybackAction.cs \
	src/NextAction.cs \
	src/PauseAction.cs \
	src/PreviousAction.cs \
	src/PlayItemAction.cs 

GENERATED_RESOURCES = \
	Resources/Exaile.addin.xml 

REFERENCES = \
	System \
	System.Core \
	System.Xml \
	System.Data \
	Mono.Data.Sqlite \
	$(GTK_SHARP_20_LIBS) \
	$(DO_PLATFORM_LIBS) \
	$(DO_UNIVERSE_LIBS)
