include $(top_srcdir)/build.rules.mk

ASSEMBLY=File

FILES = \
	gtk-gui/Do.FilesAndFolders.Configuration.cs \
	gtk-gui/generated.cs \
	src/Do.FilesAndFolders/Configuration.cs \
	src/Do.FilesAndFolders/FileItemSource.cs \
	src/Do.FilesAndFolders/ImportantFolders.cs \
	src/Do.FilesAndFolders/IndexedFolderCollection.cs \
	src/Do.FilesAndFolders/IndexedFolder.cs \
	src/Do.FilesAndFolders/NewFileAction.cs \
	src/Do.FilesAndFolders/NewFolderAction.cs \
	src/Do.FilesAndFolders/Plugin.cs \
	src/Do.FilesAndFolders/Preferences.cs \
	src/Do.FilesAndFolders/RecentFileItemSource.cs \
	src/PathNodeView.cs

RESOURCES = \
	gtk-gui/gui.stetic \
	gtk-gui/objects.xml \
	Resources/File.addin.xml

REFERENCES = \
	Mono.Posix \
	System \
	System.Core \
	$(GTK_SHARP_20_LIBS) \
	$(DO_PLATFORM_LINUX_LIBS) \
	$(DO_UNIVERSE_LIBS)
