include $(top_srcdir)/build.rules.mk

ASSEMBLY=File

FILES = \
	gtk-gui/Do.FilesAndFolders.Configuration.cs \
	gtk-gui/generated.cs \
	src/PathNodeView.cs \
	src/Do/Do.FilesAndFolders/FileTransformation.cs \
	src/Do/Do.FilesAndFolders/NewFolderAction.cs \
	src/Do/Do.FilesAndFolders/IndexedFolderCollection.cs \
	src/Do/Do.FilesAndFolders/Preferences.cs \
	src/Do/Do.FilesAndFolders/NewFileAction.cs \
	src/Do/Do.FilesAndFolders/DeleteAction.cs \
	src/Do/Do.FilesAndFolders/ImportantFolders.cs \
	src/Do/Do.FilesAndFolders/MoveAction.cs \
	src/Do/Do.FilesAndFolders/AbstractFileAction.cs \
	src/Do/Do.FilesAndFolders/Configuration.cs \
	src/Do/Do.FilesAndFolders/MoveToTrashAction.cs \
	src/Do/Do.FilesAndFolders/RecentFileItemSource.cs \
	src/Do/Do.FilesAndFolders/Plugin.cs \
	src/Do/Do.FilesAndFolders/IndexedFolder.cs \
	src/Do/Do.FilesAndFolders/FileItemSource.cs \
	src/Do/Do.FilesAndFolders/CopyAction.cs \
	src/Do/Do.FilesAndFolders/RenameAction.cs \
	src/Do/Do.Universe/IFileItemExtensions.cs

RESOURCES = \
	gtk-gui/gui.stetic \
	gtk-gui/objects.xml \
	Resources/File.addin.xml

REFERENCES = \
	Mono.Posix \
	System \
	System.Core \
	$(GTK_SHARP_20_LIBS) \
	$(DO_PLATFORM_LINUX_LIBS) \
	$(DO_UNIVERSE_LIBS)
