include $(top_srcdir)/build.rules.mk

ASSEMBLY=Firefox

FILES = \
	src/BookmarkItemSource.cs \
	src/FABarItemSource.cs

RESOURCES = \
	Resources/Firefox.addin.xml

REFERENCES = \
	Mono.Posix \
	System \
	System.Core \
	System.Data \
	Mono.Data.SqliteClient \
	$(DO_PLATFORM_LIBS) \
	$(DO_UNIVERSE_LIBS)
