include $(top_srcdir)/build.rules.mk

ASSEMBLY=Firefox

FILES = \
	src/BrowseBookmarkItem.cs \
	src/BrowseHistoryItem.cs \
	src/FirefoxHelpers.cs \
	src/FolderItem.cs \
	src/PlaceItem.cs \
	src/PlacesItemSource.cs

RESOURCES = \
	Resources/Firefox.addin.xml

REFERENCES = \
	System \
	System.Core \
	System.Data \
	Mono.Data.SqliteClient \
	$(GTK_SHARP_20_LIBS) \
	$(DO_PLATFORM_LIBS) \
	$(DO_UNIVERSE_LIBS)
