include $(top_srcdir)/build.rules.mk

ASSEMBLY=Firefox

FILES = \
	src/BrowseBookmarkItem.cs \
	src/BrowseHistoryItem.cs \
	src/FolderItem.cs \
	src/PlaceItem.cs \
	src/PlacesItemSource.cs

RESOURCES = \
	Resources/Firefox.addin.xml

REFERENCES = \
	System \
	System.Core \
	System.Data \
	Mono.Data.Sqlite \
	$(DO_PLATFORM_LIBS) \
	$(DO_UNIVERSE_LIBS)
