include $(top_srcdir)/build.rules.mk

ASSEMBLY=GNOME-Screenshot

FILES = \
	src/CurrentWindowScreenshotItem.cs \
	src/ScreenshotDelayItem.cs \
	src/ScreenshotItem.cs \
	src/ScreenshotItemSource.cs \
	src/TakeScreenshotAction.cs \
	src/WholeScreenScreenshotItem.cs

RESOURCES = \
	Resources/GNOME-Screenshot.addin.xml

REFERENCES = \
	System \
	System.Core \
	$(DO_PLATFORM_LIBS) \
	$(DO_UNIVERSE_LIBS)
