include $(top_srcdir)/build.rules.mk

ASSEMBLY=GNOME-Terminal

FILES = \
	src/OpenTerminalHereAction.cs \
	src/ProfileItem.cs \
	src/ProfileItemSource.cs \
	src/RunInTerminalAction.cs

RESOURCES = \
	Resources/GNOME-Terminal.addin.xml

REFERENCES = \
	System \
	System.Core \
	$(GCONF_SHARP_20_LIBS) \
	$(GTK_SHARP_20_LIBS) \
	$(DO_PLATFORM_LIBS) \
	$(DO_UNIVERSE_LIBS)
